netalbum-server: исправлена ошибка MethodNotFoundException
formatted отсутствует в Java 11